[package]
name = "chroma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
hex = "0.4.3"
serde = { version = "1.0.153", features = ["derive"] }
serde_json = "1.0.94"
sha3 = "0.10.6"
